codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_command_estimated_thread_usage.snap
---
source: tui/src/chatwidget/tests/status_command_tests.rs
expression: thread_usage
---
│  Thread usage:         50 credits · ~$1.82                                        │
│    Models:             GPT-5.4 80%, GPT-5 Mini 20%                                │
│    Reasoning:          Medium 20%, High 80%                                       │
│    Speed:              Fast mode 80%, Standard 20%                                │
│    Billed tokens:      120 input (25 cached) + 50 output                          │
╰───────────────────────────────────────────────────────────────────────────────────╯
